[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Layers/Misc/FileChooser.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Layers/Misc/ColorButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Fonts/TextBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Layers/Misc/SpecificLayerUI/TerrainLayer.gd" type="Script" id=4]

[node name="TerrainLayer" type="HSplitContainer"]
margin_right = 1024.0
rect_min_size = Vector2( 0, 300 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="."]
margin_right = 133.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="LeftBox"]
margin_right = 133.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Title" type="Label" parent="LeftBox/Title"]
margin_right = 133.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
text = "Terrain-Layer"

[node name="HSeparator" type="HSeparator" parent="LeftBox/Title"]
margin_top = 31.0
margin_right = 133.0
margin_bottom = 39.0

[node name="Height" type="Label" parent="LeftBox"]
margin_top = 58.0
margin_right = 133.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 40 )
text = "Height-data:"

[node name="Overlay" type="Label" parent="LeftBox"]
margin_top = 106.0
margin_right = 133.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 40 )
text = "Texture:"

[node name="ColorCode" type="Label" parent="LeftBox"]
margin_top = 154.0
margin_right = 133.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 48 )
text = "Color code:"

[node name="ColorMin" type="Label" parent="LeftBox"]
visible = false
margin_top = 210.0
margin_right = 133.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 40 )
text = "Color min: "

[node name="ColorMax" type="Label" parent="LeftBox"]
visible = false
margin_top = 258.0
margin_right = 133.0
margin_bottom = 298.0
rect_min_size = Vector2( 0, 40 )
text = "Color max:"

[node name="RightBox" type="VBoxContainer" parent="."]
margin_left = 157.0
margin_right = 1024.0
margin_bottom = 300.0

[node name="Control" type="Control" parent="RightBox"]
margin_right = 867.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="FileChooser" parent="RightBox" instance=ExtResource( 1 )]
margin_top = 58.0
margin_right = 867.0
margin_bottom = 98.0

[node name="FileChooser2" parent="RightBox" instance=ExtResource( 1 )]
margin_top = 106.0
margin_right = 867.0
margin_bottom = 146.0

[node name="CheckBox" type="CheckBox" parent="RightBox"]
margin_top = 154.0
margin_right = 48.0
margin_bottom = 202.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ButtonMin" parent="RightBox" instance=ExtResource( 2 )]
visible = false
margin_top = 210.0
margin_bottom = 250.0
size_flags_horizontal = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="RightBox/ButtonMin"]
margin_right = 669.0
margin_bottom = 997.0

[node name="ColorPicker" type="ColorPicker" parent="RightBox/ButtonMin/ConfirmationDialog"]
margin_left = 16.0
margin_top = 16.0
margin_right = 653.0
margin_bottom = 928.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMax" parent="RightBox" instance=ExtResource( 2 )]
visible = false
margin_top = 258.0
margin_bottom = 298.0
size_flags_horizontal = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="RightBox/ButtonMax"]
margin_left = -13.4696
margin_top = -44.8984
margin_right = 655.53
margin_bottom = 952.102

[node name="ColorPicker" type="ColorPicker" parent="RightBox/ButtonMax/ConfirmationDialog"]
margin_left = 16.0
margin_top = 16.0
margin_right = 653.0
margin_bottom = 928.0
__meta__ = {
"_edit_use_anchors_": false
}
